--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link
       rel="stylesheet"
       href="./src/style.css" />
-    <title>Vite + Vue</title>
+    <title>Covid19-Tracker</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div
+      id="app"
+      class="w-full"></div>
+
     <script
       type="module"
       src="/src/main.js"></script>
