--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
-<html
-  lang="en"
-  class="dark">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="./src/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Covid19-Tracker</title>
   </head>
   <body>
-    <div
-      id="app"
-      class="w-full"></div>
+    <div id="app" class="w-full"></div>
 
-    <script
-      type="module"
-      src="/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
-
